// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.rejects.not.toThrowYnnHttpException failes when the promise rejected with a HttpException instance 1`] = `
"[2mexpect([22m[31mfunction[39m[2m).toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected not to throw:
  [32m[Function HttpException][39m
Thrown:
  [31m{\\"error\\": \\"Bad Request\\", \\"response\\": 400, \\"status\\": 400}[39m
"
`;

exports[`.rejects.not.toThrowYnnHttpException fails when the thrown HttpException matched the expected one 1`] = `
"[2mexpect([22m[31mfunction[39m[2m).toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected not to throw:
  [32m{\\"error\\": \\"Bad Request\\", \\"response\\": [Error], \\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"Bad Request\\", \\"response\\": 400, \\"status\\": 400}[39m
"
`;

exports[`.rejects.toThrowYnnHttpException fails when the promise object not rejected with a HttpException instance 1`] = `
"Expect the function to throw an HttpException.
 But Error was thrown"
`;

exports[`.rejects.toThrowYnnHttpException fails when the thrown HttpException did not match the expected one 1`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"error\\": \\"Unauthorized\\", \\"response\\": 401, \\"status\\": 401}[39m
Thrown:
  [31m{\\"error\\": \\"Bad Request\\", \\"response\\": {\\"message\\": [\\"Something Error\\"], \\"status\\": 400}, \\"status\\": 400}[39m
"
`;

exports[`.toThrowYnnHttpException fails when not thrown HttpException 1`] = `
"Expect the function to throw an HttpException.
 But Error was thrown"
`;

exports[`.toThrowYnnHttpException fails when not thrown any exception 1`] = `
"Expect the fucntion to throw an HttpException.
 But it didn't throw anything"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException and not matched the given error message 1`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"error\\": \\"Something Error\\"}[39m
Thrown:
  [31m{\\"error\\": \\"Bad Request\\", \\"response\\": 400, \\"status\\": 400}[39m
"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException and not matched the given error message 2`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"error\\": \\"Bad Request\\", \\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"something error\\", \\"response\\": 400, \\"status\\": 400}[39m
"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException and not matched the given error message 3`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"error\\": \\"Bad Request\\", \\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"something error\\", \\"response\\": {\\"error\\": \\"something error\\", \\"status\\": 401}, \\"status\\": 401}[39m
"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException and not matched the given status 1`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"Unauthorized\\", \\"response\\": 401, \\"status\\": 401}[39m
"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException and not matched the given status 2`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"something error\\", \\"response\\": 401, \\"status\\": 401}[39m
"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException and not matched the given status 3`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"something error\\", \\"response\\": {\\"error\\": \\"something error\\", \\"status\\": 401}, \\"status\\": 401}[39m
"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException but not matched the given HttpException instance 1`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"error\\": \\"Bad Request\\", \\"response\\": 400, \\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"Unauthorized\\", \\"response\\": 401, \\"status\\": 401}[39m
"
`;

exports[`.toThrowYnnHttpException fails when thrown a HttpException but not matched the given HttpException instance 2`] = `
"[2mexpect([22m[31mfunction[39m[2m).not.toThrowYnnHttpException([22m[32mtype[39m[2m)[22m

Expected to throw:
  [32m{\\"error\\": \\"Bad Request\\", \\"response\\": 400, \\"status\\": 400}[39m
Thrown:
  [31m{\\"error\\": \\"Something Error\\", \\"response\\": 400, \\"status\\": 400}[39m
"
`;
